Tue Sep 28  9:54:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSArray.m: ([+allocWithZone:]) tiny optimisation.
	* Source/NSCountedSet.m: Some optimisation.
	* Source/NSTask.m: implement ([-interrupt]) to send SIGINT.
	* Source/NSUserDefaults.m: ([-searchList]) return constant array.
	Various tidying up and optimisations.
	([-persistentDomainForName:]) fixed memory leak.
	([-volatileDomainForName:]) return constant dictionary.
	([-setPersistentDomain:forName:]) make mutable copy.
	([-setVolatileDomain:forName:]) ditto

Tue Sep 28  5:54:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSTask.m: ([_collectChiled]) bugfix suggested by karl@nfox.com

Mon Sep 27 21:15:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSScanner.m: Fix error introduced into skipToNextField() macro
	my my last rewrite - sorry.  Thanks to N. Pero for narrowing down the
	problem to a level where I could locate it.
	* Source/NSGeometry.m: optimised.

1999-09-24  Adam Fedor  <fedor@gnu.org>

	* configure.in: Add check for Objective-C headers.

Thu Sep 23 20:09:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/Invocation.m: VARARGS fix by ani joshi <ajoshi@wam.umd.edu>

Tue Sep 21 20:26:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/Foundation/NSPortNameServer.h: Tidied and removed a few ivars.
	* Source/NSPortNameServer.m: Rewritten to be a bit clearer and to
	permit parallel lookup on multiple hosts.

Sun Sep 19  6:07:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSString.m: Fix bug in ([+stringByStandardizingPath]) with trailing
	slash.

Thu Sep 16 19:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Change request from Helge
	* Source/externs.m: added NSNonRetainedObjectMapValueCallBacks
	* Headers/Foundation/NSMapTable.h: ditto.

Thu Sep 16  8:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
