@@ -1759,17 +1759,21 @@ NSZoneStats (NSZone *zone)
 #else
 
 /*
- * Dummy zone used with garbage collection.
- * In some places we make a distinction between the nul zone and the dummy
- * zone - items pointed to by memory in the nul zone can be deallocated by
- * the gc mechanism, while those pointed to from memory in the dummy zone
- * can't.
+ * Dummy zones used with garbage collection.
+ * The 'atomic' zone is for memory that will be assumed not to contain
+ * pointers for garbage collection purposes.
  */
 static NSZone default_zone =
 {
   0, 0, 0, 0, 0, 0, 0, 0, @"default", 0
 };
 NSZone* __nszone_private_hidden_default_zone = &default_zone;
+
+static NSZone atomic_zone =
+{
+  0, 0, 0, 0, 0, 0, 0, 0, @"default", 0
+};
+NSZone* __nszone_private_hidden_atomic_zone = &atomic_zone;
 
 #endif	/* GS_WITH_GC */
 
